[DRS-130] Changed to two column flex grid on mobile also added fix for preview image for pvideo posts

--- a/cartridges/app_drschar_storefront/cartridge/client/default/scss/experience/components/drschar_components/instagramFeed.scss
+++ b/cartridges/app_drschar_storefront/cartridge/client/default/scss/experience/components/drschar_components/instagramFeed.scss
@@ -1,17 +1,23 @@
 @import "../../variables";
-.experience-component.experience-drschar_components-instagramFeed .container .row .col-md-3.col-sm-6{
+.experience-component.experience-drschar_components-instagramFeed .container .row .col-lg-3.col-6{
     padding-right: 0px;
     padding-left: 0px;
 }
 
 .image-container {
     position: relative;
+    height: 100%;
   }
   
   .tile-image {
     display: block;
     width: 100%;
-    height: auto;
+    height: 100%;
+  }
+
+  .tile-image-video {
+    height: 100%;
+    background-size: 100% 100%;
   }
   
   .overlay {
@@ -42,7 +48,7 @@
   } 
   .overlay-text {
     color: transparent;
-    font-size: 20px;
+    font-size: 1rem;
     text-align: center;
   }
   .overlay-link p{
